# rag_pipeline

./: .gitattributes  .gitignore  README.md  __init__.py  chunker.py  cli.py  config.example.yaml  config.py  image_describer.py  ingest.py  ingest_fix_snippet.txt  logger.py  parsers.py  pyproject.toml  rag_service.py  reranker.py  retriever.py  test_bm25_cache.py  test_search.py  test_vision.py  vector_store.py
rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: dashboard.css  dashboard.js
templates/: dashboard.html
