[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Local RAG Pipeline with ChromaDB + Qwen Embedding + Qwen Reranker"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "jieba>=0.42",
    "rank-bm25>=0.2.2",
    "watchdog>=4.0",
    "openai>=1.30",
    "requests>=2.31",
]

[tool.setuptools]
py-modules = ["config", "parsers", "chunker", "vector_store", "reranker", "retriever", "ingest", "rag_service", "cli"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
